# test_fp8_on_4090

./: CMakeLists.txt  kernel.ptx  library.cu
